--- a/style.css
+++ b/style.css
@@ -197,7 +197,12 @@ a:hover {
 
 .long-name {
   font-size: 24px;
-  margin-top: 50px;
+  margin-top: 20px;
+}
+.back{
+  font-size: 30px;
+  color: #474747;
+  margin-left: 20px;
 }
 
 .price {
