--- a/style.css
+++ b/style.css
@@ -154,6 +154,10 @@ a:hover {
   margin-left: 40px;
 }
 
+.logo img{
+  width: 180px;
+}
+
 .top-bar {
   /* background: lightgrey; */
   display: flex;
@@ -165,6 +169,8 @@ a:hover {
 .lead {
   margin-left: 75px;
   margin-bottom: 20px;
+  color:#474747;
+
 }
 
 .products {
@@ -219,6 +225,14 @@ footer {
   padding-top: 50px;
   text-align: center;
   background-color: rgb(245, 245, 245);
+}
+
+footer{
+  color: #474747;
+}
+
+.footer a{
+  color: #474747;
 }
 
 /* Tablet screens */
@@ -293,6 +307,14 @@ footer {
     padding: 20px;
   }
 
+  .logo {
+    width: auto;
+    display: block;
+  }
+
+  .logo img{
+    width: 180px;
+  }
  
  }
 
