--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100;200');
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100;200");
 
 * {
   margin: 0;
   padding: 0;
-  font-family: 'Outfit', sans-serif;
+  font-family: "Outfit", sans-serif;
 }
 
 body {
@@ -39,7 +39,7 @@ a:hover {
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: #949494;
+  background-color: #9a9a9a;
   overflow: hidden;
   transition: 0.3s;
   /* padding-left: 50px; */
@@ -57,7 +57,7 @@ a:hover {
 }
 
 .topnav-left ul {
-  padding-top: 70px;
+  padding-top: 60px;
   padding-left: 30px;
   list-style: none;
 }
@@ -82,15 +82,14 @@ a:hover {
   font-size: 16px;
 }
 
-.top-bar {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+.blog-body{
   margin-left: 100px;
+  margin-right: 100px;
 }
 
-.categories {
-  margin-left: 60px;
+.blog-body p{
+  line-height: 1.8;
+  font-size: larger;
 }
 
 .button-close {
@@ -109,7 +108,7 @@ a:hover {
 
 .button-open {
   /* padding-top: 0; */
-  position: absolute;
+  position:absolute;
   right: 100px;
   color: #474747;
   font-size: 36px;
@@ -126,7 +125,7 @@ a:hover {
 
 @media screen and (max-height: 450px) {
   .topnav {
-    /* padding-top: 15px; */
+  /* padding-top: 15px; */
   }
   .topnav a {
     font-size: 18px;
@@ -165,13 +164,13 @@ a:hover {
   margin-left: 40px;
 }
 
-.logo img {
+.logo img{
   width: 200px;
 }
 
 .top-bar {
-  /*  display: flex;
-  flex-direction: column; */
+  display: flex;
+  flex-direction: row;
   justify-content: space-between;
   margin-left: -50px;
 }
@@ -179,7 +178,8 @@ a:hover {
 .lead {
   margin-left: 75px;
   margin-bottom: 20px;
-  color: #474747;
+  color:#474747;
+
 }
 
 .products {
@@ -188,6 +188,24 @@ a:hover {
   grid-gap: 30px;
   padding: 20px;
 }
+
+
+  .blog-posts {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 30px;
+    padding-left: 200px;
+    padding-right: 200px;
+  }
+
+  .posts{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 30px;
+    padding-left: 200px;
+    padding-right: 200px;
+  }
+
 
 .p-name {
   font-size: x-large;
@@ -218,8 +236,9 @@ a:hover {
 
 .long-name {
   font-size: 24px;
+  
 }
-.back {
+.back{
   font-size: 30px;
   color: #474747;
   margin-left: 20px;
@@ -234,7 +253,7 @@ a:hover {
   padding-bottom: 10px;
 }
 
-.categories {
+.categories{
   padding-right: 30px;
 }
 
@@ -245,11 +264,11 @@ footer {
   background-color: rgb(245, 245, 245);
 }
 
-footer {
+footer{
   color: #474747;
 }
 
-.footer a {
+.footer a{
   color: #474747;
 }
 
@@ -266,6 +285,7 @@ footer {
   display: none; /* Hidden by default */
 }
 
+
 /* The "show" class is added to the filtered elements */
 .show {
   display: block;
@@ -273,7 +293,7 @@ footer {
 
 /* Style the buttons */
 .btn {
-  border: none;
+ border: none;
   outline: none;
   padding: 5px 16px;
   background-color: transparent;
@@ -283,12 +303,15 @@ footer {
 
 /* Add a light grey background on mouse-over */
 .btn:hover {
+  
   border-bottom: 1px solid grey;
+  
 }
 
 /* Add a dark background to the active button */
 .btn.active {
   border-bottom: 1px solid grey;
+
 }
 
 /* Tablet screens */
@@ -301,42 +324,44 @@ footer {
     padding: 10px;
   }
 
-  .top-bar {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    margin-left: -50px;
+  .blog-posts {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 30px;
+    padding-left: 40px;
+    padding-right: 40px;
   }
 
   .topnav-right {
     display: none;
-  }
+   }
 
-  .topnav-left {
-    margin: auto;
+   .topnav-left {
+    margin:auto;
     text-align: center;
-  }
+    }
 
-  .topnav-left ul li a {
-    text-decoration: none;
-    color: #f1f1f1;
-    transition: 0.5s;
-    width: 300px;
-    font-size: 35px;
-    display: inline-block;
-    text-align: center;
-    line-height: 60px;
-  }
+    .topnav-left ul li a {
+      text-decoration: none;
+      color: #f1f1f1;
+      transition: 0.5s;
+      width: 300px;
+      font-size: 35px;
+      display: inline-block;
+      text-align: center;
+      line-height: 60px;
+    }
+    
+    .topnav-left ul {
+      padding-top: 10px;
+      padding-left: 30px;
+      list-style: none;
+ 
+    }
 
-  .topnav-left ul {
-    padding-top: 10px;
-    padding-left: 30px;
-    list-style: none;
-  }
-
-  body {
-    border: none;
-  }
+    body {
+      border: none;
+    }
 }
 
 /* Mobile screens */
@@ -357,19 +382,19 @@ footer {
     display: flex;
   }
  */
-
-  .top-bar {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    margin-left: -50px;
-  }
-
   .products {
     display: grid;
     grid-template-columns: 1fr;
     grid-gap: 20px;
     padding: 10px;
+  }
+
+  .blog-posts {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 30px;
+    padding-left: 40px;
+    padding-right: 40px;
   }
 
   .product-display {
@@ -387,23 +412,26 @@ footer {
     margin-right: auto;
   }
 
-  .logo img {
+  .logo img{
     width: 180px;
   }
 
   .button-close {
     top: 43px;
     right: 38px;
-  }
-
-  .button-open {
-    /* padding-right: 40px; */
-    position: absolute;
-    top: 35px;
-    right: 40px;
-  }
-
-  .topnav-left ul {
-    padding-left: 0;
-  }
 }
+
+.button-open {
+  /* padding-right: 40px; */
+  position: absolute;
+  top:35px;
+  right: 40px;
+
+}
+
+.topnav-left ul {
+  padding-left: 0;
+}
+ 
+ }
+
