--- a/style.css
+++ b/style.css
@@ -127,7 +127,7 @@ a:hover {
   display: grid;
   grid-template-columns: 1fr 1fr;
   font-size: 1.3rem;
-  line-height: 1.8;
+  line-height: 1;
   margin-left: 50px;
   margin-right: 50px;
   align-items: space-between;
@@ -138,10 +138,12 @@ a:hover {
 .about-left {
 
 margin: 20px;
+background-color: red;
 }
 
 .about-left img {
   width: 100%;
+  
   
 } 
 
@@ -387,7 +389,7 @@ footer {
   .about {
     display: grid;
     grid-template-columns: 1fr;
-    font-size: 1.2rem;
+    font-size: 1rem;
     margin-left: 5px;
     margin-right: 5px;
   }
@@ -470,6 +472,7 @@ footer {
     display: grid;
     grid-template-columns: 1fr;
     font-size: 1.2rem;
+    line-height: 1;
     margin-left: 5px;
     margin-right: 5px;
 
